--- a/src/main/resources/templates/order/subscription.html
+++ b/src/main/resources/templates/order/subscription.html
@@ -110,17 +110,17 @@
     <div class="container my-5">
       <div class="row">
         <form action="/order" method="post">
-          <table border="1">
+          <table border="1" align="center">
             <tr>
               <th>
-                <input type="checkbox" name="sub_chk_box" id="sub_chk_all" value=""> 전체선택
+<!--                <input type="checkbox" name="check_box" id="check_box_all" value="checkAll" onclick="checkAll(this)"> 전체선택-->
               </th>
               <th>구독권 정보</th>
             </tr>
             <div th:each="data : ${subscriptionList}">
             <tr>
               <td rowspan="3">
-                <input type="checkbox" name="sub_chk_box" id="sub_chk_num" value="">
+<!--                <input type="checkbox" name="check_box" id="check_box" th:value="${data.id}" onclick="chkClicked()">-->
                 우린 혼자여도 프리미엄 본다!
                 <input type="hidden" id="" name="" th:value="${data.id}">
               </td>
@@ -135,7 +135,7 @@
             </div>
           </table>
           <br>
-          <a type="button" class="btn btn-danger" th:href="@{/order(from=subscriptionPage)}">론리미엄 구독권 결제하기</a>
+          <a type="button" class="btn btn-danger" th:href="@{/order-from-subscription}">론리미엄 구독권 결제하기</a>
         </form>
         <br>
         <a th:href="@{/main}" style="font-size: small; color: dimgray">메인으로</a>
@@ -152,6 +152,32 @@
 <script th:src="@{/index/js/main.js/}"></script>
 <script th:src="@{/index/js/bootstrap.bundle.min.js/}"></script>
 <script th:src="@{/js/jquery-3.6.0.min.js}"></script>
+
+
+<script>
+
+  function chkClicked(){
+
+    const allCount = document.querySelectorAll("check_box").length;
+
+    const query = 'input[name="check_box"]:checked';
+    const selectedElements = document.querySelectorAll(query);
+    const selectedElementsCnt = selectedElements.length;
+
+    if(allCount == selectedElementsCnt){
+      document.getElementById('check_box_all').checked = true;
+    }else{
+      document.getElementById('check_box_all').checked = false;
+    }
+  }
+  function checkAll(checkAll) {
+    var checkboxes = document.getElementsByName("check_box");
+
+    checkboxes.forEach((checkbox) => {
+      checkbox.checked = checkAll.checked;
+    })
+  }
+</script>
 
 </body>
 </html>
