--- a/src/main/resources/templates/cart/cartList.html
+++ b/src/main/resources/templates/cart/cartList.html
@@ -139,7 +139,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" th:href="@{/mypage}">마이페이지</a></li>
-            <li><a class="dropdown-item" th:href="@{/subscription}">구독권 구매</a></li>
+            <li><a class="dropdown-item" th:href="@{/subscription-page}">구독권 구매</a></li>
             <li>
               <form class="dropdown-item" action="/logout" method="post">
                 <button class="logout-button" type="submit">로그아웃</button>
