--- a/src/main/resources/templates/content/main.html
+++ b/src/main/resources/templates/content/main.html
@@ -159,7 +159,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" th:href="@{/mypage}">마이페이지</a></li>
-            <li><a class="dropdown-item" th:href="@{/subscription}">구독권 구매</a></li>
+            <li><a class="dropdown-item" th:href="@{/subscription-page}">구독권 구매</a></li>
             <li><a class="dropdown-item" th:href="@{/write}">상품 등록</a></li>
             <li>
               <form class="dropdown-item" action="/logout" method="post">
