--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -157,8 +157,25 @@
       회원 탈퇴
     </a>
 
+  </div>
+  <div class="container">
+    <h2 class="title">내 구독 정보</h2>
+
+    <div>
+      <p>구독권명: <span th:text="${}"></span></p>
+      <p>구독 시작일: <span th:text="${}"></span></p>
+      <p>구독 종료일: <span th:text="${}"></span></p>
+    </div>
+
+    <!-- 구독 취소 버튼 -->
+    <a class="btn btn-danger" th:if="${memberResponse != null}"
+       th:onclick="'javascript: confirmAndDelete(' + ${memberResponse.id} + ')'" href="#">
+      구독 취소
+    </a>
+
 
   </div>
+
 </div>
 
 <!---footer---------->
