--- a/src/main/resources/templates/cart/purchaseList.html
+++ b/src/main/resources/templates/cart/purchaseList.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>컨텐츠 결제</title>
+  <title>컨텐츠 결제하기</title>
   <link rel="stylesheet" th:href="@{/css/index/css/bootstrap.min.css}"/>
   <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -160,10 +160,11 @@
 </nav>
 <!--//네비게이션-->
 
-<form>
+<!-- 컨텐츠 삭제 폼 -->
+<form th:action="@{/deletePurchaseContent}" method="post">
   <div class="main">
     <div class="container">
-      <h2 class="title">컨텐츠 결제</h2>
+      <h2 class="title">결제 페이지</h2>
       <div class="cart-table">
         <table class="table">
           <thead>
@@ -172,15 +173,95 @@
             <th scope="col">이미지</th>
             <th scope="col">제목</th>
             <th scope="col">가격</th>
-            <th scope="col">찜한 날</th>
+            <th scope="col">구매 추가일</th>
             <th scope="col">삭제</th>
           </tr>
           </thead>
+          <tbody>
+          <tr th:each="list : ${purchaseList}">
+            <td class="align-middle text-center">
+              <label for="purchaseId">
+                <input id="purchaseId" class="checkbox-input" type="checkbox" name="purchaseId"
+                       th:value="${list.getPurchaseId()}">
+              </label>
+            </td>
+            <td class="align-middle text-center">
+              <img th:src="@{${list.getContentImgPath()}}" alt="cartImage1">
+            </td>
+            <td class="align-middle text-center"><span class="text-white"
+                                                       th:text="${list.getContentTitle()}"></span></td>
+            <td class="align-middle text-center"><span class="text-white"
+                                                       th:text="${list.getContentPrice()}"></span></td>
+            <td class="align-middle text-center"><span class="text-white"
+                                                       th:text="${list.getPurchaseAt()}"></span>
+            </td>
+            <td class="align-middle text-center">
+              <button type="submit" class="btn btn-secondary">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                     fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                  <path
+                      d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a 2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z">
+                  </path>
+                </svg>
+                <input type="hidden" name="contentId" th:value="${list.getContentId()}">
+                <input type="hidden" name="memberId" th:value="${loginMember.id}">
+              </button>
+            </td>
+          </tr>
+          </tbody>
         </table>
       </div>
     </div>
   </div>
 </form>
+
+<!-- 컨텐츠 결제 버튼 -->
+<form>
+  <div class="cart-order d-flex justify-content-center">
+    <button type="button" class="btn btn-outline-danger" id="paymentButton">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
+        <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V7z"></path>
+        <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1z"></path>
+      </svg>
+      컨텐츠 결제
+    </button>
+  </div>
+</form>
+
+<script>
+  function handlePurchase() {
+    var selectedIds = [];
+
+    // 선택된 체크박스의 값을 배열에 추가
+    $("input.checkbox-input:checked").each(function () {
+      selectedIds.push($(this).val());
+    });
+
+    // 배열을 JSON 형태로 변환
+    var selectedIdsJSON = JSON.stringify(selectedIds);
+
+    $.ajax({
+      url: "/결제하기",
+      type: "POST",
+      contentType: "application/json",
+      data: selectedIdsJSON,
+      async: true,
+      success: function (response) {
+        window.location.href = "/purchaseList";
+      },
+      error: function (error) {
+        console.error(error);
+      }
+    });
+  }
+
+  // 문서가 로드된 후 실행될 코드
+  $(document).ready(function () {
+    // 컨텐츠 구매 버튼에 클릭 이벤트 리스너 추가
+    var purchaseButton = document.getElementById("paymentButton");
+    purchaseButton.addEventListener("click", handlePurchase);
+  });
+</script>
 
 <!---footer---------->
 <footer class="footer text-center mt-5 text-muted">
