--- a/src/main/resources/templates/order/subscription.html
+++ b/src/main/resources/templates/order/subscription.html
@@ -88,9 +88,9 @@
             <li><a class="dropdown-item" href="#">Something else Bam 🌰</a></li>
           </ul>
         </li>
-        <li th:unless="${loginMember != null}" class="nav-item">
-          <a class="nav-link" th:href="@{/login}">로그인</a>
-        </li>
+<!--        <li th:unless="${loginMember != null}" class="nav-item">-->
+<!--          <a class="nav-link" th:href="@{/login}">로그인</a>-->
+<!--        </li>-->
       </ul>
 
       <form class="d-flex">
