--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -35,14 +35,14 @@
 
       <form class="login" onsubmit="return saveMember(this);">
         <div class="form-group">
-          <input type="text" id="user-id" name="loginId" class="form-control" placeholder="아이디" required>
+          <input type="text" id="user-id" name="loginId" class="form-control" placeholder="아이디 : 영문" required>
           <button type="button" id="idCheckBtn" class="btn btn-primary" onclick="checkLoginId();">중복
             확인
           </button>
         </div>
 
         <div class="form-group">
-          <input type="password" id="user-pw" name="password" class="form-control" placeholder="비밀번호" required >
+          <input type="password" id="user-pw" name="password" class="form-control" placeholder="비밀번호 : 영문 + 숫자 조합" required >
         </div>
 
         <div class="form-group">
@@ -55,11 +55,11 @@
         </div>
 
         <div class="form-group">
-          <input type="email" id="user-email" name="email" class="form-control" placeholder="이메일" required>
+          <input type="email" id="user-email" name="email" class="form-control" placeholder="이메일 : ex)bamflix@email.com" required>
         </div>
 
         <div class="form-group">
-          <input type="text" id="user-phone" name="phone" class="form-control"placeholder="휴대폰번호" required>
+          <input type="text" id="user-phone" name="phone" class="form-control" placeholder="휴대폰번호" required>
         </div>
 
         <div class="form-group">
@@ -138,7 +138,7 @@
 
   // 회원 정보 저장 (회원가입)
   function saveMember(form) {
-    event.preventDefault(); // 이벤트의 기본 동작 중단
+    event.preventDefault();
 
     // 필드 유효성 검사
     if (!validationMemberInfo(event.target)) {
@@ -151,7 +151,6 @@
     new FormData(form).forEach((value, key) => (params[key] = value.trim()));
     params.birthday = params.birthday.replace(/(\d{4})(\d{2})(\d{2})/g, '$1-$2-$3');
 
-    // Save API 호출
     callApi('/members', 'post', params, handleSignupSuccess);
   }
 
