--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -84,7 +84,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid relative">
     <a class="navbar-brand" th:href="@{/main}"><img th:src="@{/css/index/img/logo-Netflix.png}"
-                                          alt="Responsive image LOGO"/></a>
+                                                    alt="Responsive image LOGO"/></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -158,24 +158,27 @@
     </a>
 
   </div>
-  <br>
-  <div class="container">
-    <h2 class="title">내 구독 정보</h2>
 
-    <div>
+  <br>
+
+  <div class="container" id="subscription">
+    <h2 class="title">내 구독 정보</h2>
+    <div th:if="${orderResponse != null}">
       <p>구독권명: <span th:text="${orderResponse.getSubscriptionName()}"></span></p>
       <p>구독 시작일: <span th:text="${orderResponse.getStartDate()}"></span></p>
       <p>구독 종료일: <span th:text="${orderResponse.getEndDate()}"></span></p>
+      <!-- 구독 취소 버튼 -->
+      <a class="btn btn-danger" th:if="${orderResponse.isState() == true}"
+         th:onclick="'javascript: mySubscriptionCancel(' + ${orderResponse.getMemberId()} + ')'"
+         href="#">
+        구독 취소
+      </a>
     </div>
-
-    <!-- 구독 취소 버튼 -->
-    <a class="btn btn-danger" th:if="${orderResponse.isState() == true}"
-       th:onclick="'javascript: mySubscriptionCancel(' + ${orderResponse.getMemberId()} + ')'" href="#">
-      구독 취소
-    </a>
-
-
+    <div th:unless="${orderResponse != null}">
+      <p>구독 정보가 없습니다.</p>
+    </div>
   </div>
+
 
 </div>
 
@@ -204,23 +207,23 @@
     }
   }
 
-  function mySubscriptionCancel(memberId){
+  function mySubscriptionCancel(memberId) {
 
-    if(confirm('구독권 취소 시 남은 일자는 사라집니다. 그래도 취소하시겠습니까?')){
+    if (confirm('구독권 취소 시 남은 일자는 사라집니다. 그래도 취소하시겠습니까?')) {
 
-        fetch('/subscription_cancel/' + memberId, {
-          method: 'PUT'
-        }).then(response => {
-          if (response.ok) {
-            alert('구독권 취소가 성공적으로 처리되었습니다.');
-            window.location.href = '/mypage';
-          } else {
-            alert('구독권 취소 중 오류가 발생했습니다.');
-          }
-        }).catch(error => {
-          console.error('구독권 취소 중 오류 발생:', error);
+      fetch('/subscription_cancel/' + memberId, {
+        method: 'PUT'
+      }).then(response => {
+        if (response.ok) {
+          alert('구독권 취소가 성공적으로 처리되었습니다.');
+          window.location.href = '/mypage';
+        } else {
           alert('구독권 취소 중 오류가 발생했습니다.');
-        });
+        }
+      }).catch(error => {
+        console.error('구독권 취소 중 오류 발생:', error);
+        alert('구독권 취소 중 오류가 발생했습니다.');
+      });
     }
   }
 </script>
