--- a/src/main/resources/templates/content/categoryContent.html
+++ b/src/main/resources/templates/content/categoryContent.html
@@ -9,11 +9,10 @@
       background-color: black;
       color: white;
       display: flex;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
       height: 100vh;
-      padding-top: 20px;
-      padding-bottom: 20px;
+      margin: 0;
     }
 
     .content-container {
@@ -67,7 +66,6 @@
       display: flex;
       justify-content: center; /* 가로 정렬 */
       margin-top: 20px;
-      margin-bottom: 40px;
     }
 
     /* 캐러셀 컨트롤 버튼 배경색과 테두리 제거 */
@@ -94,10 +92,10 @@
     /*  card 그룹 */
     /* 카드 그리드 레이아웃 설정 */
     .card-group {
-      margin: 250px 200px 100px 100px;
+      margin: 30px 15px 15px 15px;
+      display: grid;
       grid-template-columns: repeat(auto-fill, minmax(calc(16.666% - 10px), 1fr)); /* 최대 6개의 열을 생성 */
       gap: 10px; /* 카드 사이의 간격 설정 */
-      flex-direction: row;
     }
 
     .card-group > .card {
@@ -106,23 +104,38 @@
 
     /* 카드 이미지의 너비와 높이 설정 */
     .card-img-top {
-      /*width: 100%;*/
-      /*height: 100%;*/
+      width: 100%;
+      height: 100%;
       object-fit: cover; /* 이미지 비율 유지 */
     }
 
+    /*!* 카드 그룹 내부의 카드 내용 줄바꿈 설정 (예: 카드 제목이 긴 경우) *!*/
+    /*.card-footer {*/
+    /*  white-space: nowrap;*/
+    /*  overflow: hidden;*/
+    /*  text-overflow: ellipsis;*/
+    /*}*/
+
     .contentCard {
       display: flex !important;
-      flex-direction: column;
-      flex-wrap: wrap;
-
-      margin-left: 100px;
-      margin-top: 250px;
-
     }
 
     .contentCard .card {
-      margin-left: 10px;
+      margin: auto 2rem;
+    }
+
+    /* 작은 화면 크기에서 카드 그룹을 한 줄에 하나의 카드만 보이도록 설정 */
+    @media screen and (max-width: 768px) {
+      .card-group {
+        grid-template-columns: repeat(1, 1fr); /* 한 줄에 하나의 카드만 표시 */
+      }
+      .card-group .contentCard {
+        flex-direction: column !important;
+      }
+      .contentCard .card,
+      .card-group > .card {
+        margin: 0;
+      }
     }
 
     /* 추가된 스타일: 작은 화면 크기에서 이미지를 세로로 정렬 */
@@ -139,64 +152,48 @@
 
 <main class="container-fluid">
   <div class="card-group contentCard">
-    <section style="display: flex" id="section1">
-      <div class="card">
-          <span th:text="${Action}"></span>
-      </div>
-
+    <section style="display: inline" id="section1">
+      <h2>Action</h2>
       <div class="card" th:each="content : ${contents}">
         <div th:if="${#strings.equals(content.genre, 'Action')}">
           <a th:href="@{/contentDetail(title=${content.title})}">
-            <img th:src="@{${content.getImgPath()}}" class="card-img-top" alt=card1>
+            <img th:src="@{${content.getImgPath()}}" class="card-img-top" alt=card1 style="margin-left: 15px">
           </a>
         </div>
       </div>
     </section>
 
     <br><br>
-    <section style="display: flex" id="section2">
-      <div class="card" th:each="content : ${contents}">
-        <div th:if="${#strings.equals(content.genre, 'Romance')}">
-          <h2>Romance</h2>
-        </div>
-      </div>
-
+    <section style="display: inline" id="section2">
+      <h2>Romance</h2>
       <div class="card" th:each="content : ${contents}">
         <div th:if="${#strings.equals(content.genre, 'Romance')}">
           <a th:href="@{/contentDetail(title=${content.title})}">
-            <img th:src="@{${content.getImgPath()}}" class="card-img-top" alt=card1>
+            <img th:src="@{${content.getImgPath()}}" class="card-img-top" alt=card1 style="margin-left: 15px">
           </a>
         </div>
       </div>
     </section>
 
     <br><br>
-    <section style="display: flex" id="section3">
-      <div class="card" th:each="content : ${contents}">
-        <div th:if="${#strings.equals(content.genre, 'Comic')}">
-          <h2>Comic</h2>
-        </div>
-      </div>
+    <section style="display: inline" id="section3">
+      <h2>Comic</h2>
       <div class="card" th:each="content : ${contents}">
         <div th:if="${#strings.equals(content.genre, 'Comic')}">
           <a th:href="@{/contentDetail(title=${content.title})}">
-            <img th:src="@{${content.getImgPath()}}" class="card-img-top" alt=card1>
+            <img th:src="@{${content.getImgPath()}}" class="card-img-top" alt=card1 style="margin-left: 15px">
           </a>
         </div>
       </div>
     </section>
 
     <br><br>
-    <section style="display: flex" id="section4">
-      <div class="card" th:each="content : ${contents}">
-        <div th:if="${#strings.equals(content.genre, 'SF')}">
-          <h2>SF</h2>
-        </div>
-      </div>
+    <section style="display: inline" id="section4">
+      <h2>SF</h2>
       <div class="card" th:each="content : ${contents}">
         <div th:if="${#strings.equals(content.genre, 'SF')}">
           <a th:href="@{/contentDetail(title=${content.title})}">
-            <img th:src="@{${content.getImgPath()}}" class="card-img-top" alt=card1>
+            <img th:src="@{${content.getImgPath()}}" class="card-img-top" alt=card1 style="margin-left: 15px">
           </a>
         </div>
       </div>
