--- a/src/main/resources/templates/content/main.html
+++ b/src/main/resources/templates/content/main.html
@@ -200,15 +200,15 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img th:src="@{/css/index/img/theglory.jpeg}" class="d-block w-100" alt="car1"
+          <img th:src="@{/css/index/img/squidgame.jpeg}" class="d-block w-100" alt="car1"
                width="1200" height="600">
         </div>
         <div class="carousel-item">
-          <img th:src="@{/css/index/img/maskgirl.jpeg}" class="d-block w-100" alt="car2"
+          <img th:src="@{/css/index/img/theglory.jpeg}" class="d-block w-100" alt="car2"
                width="1200" height="600">
         </div>
         <div class="carousel-item">
-          <img th:src="@{/css/index/img/cellove.jpeg}" class="d-block w-100" alt="car3" width="1200"
+          <img th:src="@{/css/index/img/maskgirl.jpeg}" class="d-block w-100" alt="car3" width="1200"
                height="600">
         </div>
       </div>
