--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -83,7 +83,7 @@
 <!--네비게이션-->
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid relative">
-    <a class="navbar-brand" th:href="@{/main}"><img th:src="@{/css/index/img/logo-Netflix.png}"
+    <a class="navbar-brand" th:href="@{/main}"><img th:src="@{/css/index/img/bamflix_img.png}"
                                                     alt="Responsive image LOGO"/></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -111,7 +111,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" th:href="@{/mypage}">마이페이지</a></li>
-            <li><a class="dropdown-item" th:href="@{/subscription}">구독권 구매</a></li>
+            <li><a class="dropdown-item" th:href="@{/subscription-page}">구독권 구매</a></li>
             <li>
               <form class="dropdown-item" action="/logout" method="post">
                 <button class="logout-button" type="submit">로그아웃</button>
